versions/v1.0.0/guides/WILL-User-Guide.md
---
version: 2.0.0
date: 2025-03-04
type: guide-doc
status: public
tags: [william, will, user, guide]
related: []
changelog:
  - version: 2.0.0
    date: 2025-03-04
    changes:
      - "MAJOR: Switch to YAML frontmatter"
      - "MAJOR: Enhanced metadata structure"
    references: []
  - version: 1.0.0
    date: 2025-03-03
    changes:
      - "MAJOR: Initial documentation"
    references: []
---
# WILL User Guide: Understanding Proposal Validation

## Overview

WILL is designed to ensure high-quality proposals through a comprehensive validation system. While this may seem complex at first, this guide will help you understand what's needed for a successful proposal.

## The Basics

### 1. Proposal Components
Every proposal needs:
- A Track (e.g., Research, Community)
- A Level (e.g., L1, L2)
- A Title
- Clear Objectives
- Defined Scope
- Timeline
- Risk Assessment

### 2. Quality Metrics
Your proposal is evaluated on:
- Structure (15%)
- Content (15%)
- Impact (35%)
- Innovation (35%)

## Step-by-Step Guide

### Step 1: Choose Your Track
```yaml
Available Tracks:
- Genesis: Core platform development
- Fractal: System scaling and optimization
- Operations: Day-to-day improvements
- Research: New technologies and methods
- Community: User engagement and growth
- Evolution: Long-term strategic changes
```

### Step 2: Select Your Level
```yaml
Level Guide:
L1: Small improvements
L2: Significant features
L3: Major system changes
```

### Step 3: Define Objectives
Good objectives are:
- Specific
- Measurable
- Achievable
- Relevant
- Time-bound

Example:
```yaml
Bad Objective: "Make the system better"
Good Objective: "Reduce proposal validation time by 50% within 3 months"
```

### Step 4: Outline Scope
Include:
- Components affected
- Specific requirements
- Success metrics

Example:
```yaml
Scope:
  Components:
    - Validation system
    - User interface
  Requirements:
    - Maintain 99% accuracy
    - Support mobile devices
  Metrics:
    - Processing time
    - User satisfaction
```

### Step 5: Set Timeline
Provide:
- Start date
- Key milestones
- Completion date

### Step 6: Assess Risks
Consider:
- Technical challenges
- Resource constraints
- Dependencies
- Security implications

## Common Validation Issues

### 1. Missing Context
```yaml
Problem: "Add new feature"
Better: "Add automated proposal validation to reduce review time"
```

### 2. Vague Objectives
```yaml
Problem: "Improve performance"
Better: "Reduce proposal validation time from 2 hours to 30 minutes"
```

### 3. Incomplete Scope
```yaml
Problem: "Update UI"
Better: "Update proposal submission form with real-time validation feedback"
```

### 4. Security Levels
```yaml
Available Levels:
- PUBLIC: General improvements
- CLASSIFIED: Sensitive changes
- BROKEN_ARROW: Critical system updates
```

## Tips for Success

1. **Use Templates**
   - Start with existing proposal templates
   - Follow the structure provided
   - Include all required sections

2. **Get Early Feedback**
   - Share drafts with community
   - Address concerns early
   - Iterate based on feedback

3. **Focus on Impact**
   - Explain the benefits clearly
   - Quantify improvements
   - Show alignment with goals

4. **Document Dependencies**
   - List required resources
   - Identify blocking issues
   - Plan for contingencies

## Understanding Validation Messages

When WILL provides feedback, it will highlight:

1. **Missing Requirements**
   ```yaml
   Example: "Track not specified - please select from available tracks"
   Action: Choose a track from the list
   ```

2. **Quality Issues**
   ```yaml
   Example: "Objectives lack measurable outcomes"
   Action: Add specific, measurable goals
   ```

3. **Security Concerns**
   ```yaml
   Example: "Deployment requires CLASSIFIED clearance"
   Action: Update security level or revise scope
   ```

## Getting Help

If you're stuck:
1. Check this guide's examples
2. Review successful proposals
3. Ask the community for help
4. Use WILL's interview mode for guidance

Remember: The validation system exists to help create better proposals, not to block progress. Take your time to understand the requirements, and don't hesitate to ask for help!
